--- a/chelseasymphony/static/chelseasymphony/scss/layout/_about.scss
+++ b/chelseasymphony/static/chelseasymphony/scss/layout/_about.scss
@@ -1,4 +1,4 @@
-#basic-page {
+#basic-page p {
     @extend %copy;
 }
 
