--- a/chelseasymphony/static/chelseasymphony/scss/layout/_nav.scss
+++ b/chelseasymphony/static/chelseasymphony/scss/layout/_nav.scss
@@ -246,7 +246,7 @@
         border-top: 3px solid white;
         position: absolute;
         display: none;
-        background-color: rgba(255, 255, 255, .7);
+        background-color: #FFF;
         > li {
           list-style: none;
           list-style-image: none;
